<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/lang_english"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="160dp"
        android:background="@drawable/button"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:textAlignment="gravity"
        android:visibility="visible">

        <Button
            android:id="@+id/lang_englishbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:paddingLeft="25dp"
            android:paddingRight="20dp"
            android:text="@string/mic_textbtn1"
            android:textColor="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lang_Arabic"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="158dp"
        android:background="@drawable/button"
        android:orientation="vertical"
        android:visibility="gone">


        <Button
            android:id="@+id/lang_Arabicbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:gravity="center_horizontal|top"
            android:maxLines="2"
            android:paddingBottom="20dp"
            android:text="@string/mic_textbtn2" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lang_French"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="158dp"
        android:background="@drawable/button"
        android:orientation="vertical"
        android:visibility="gone">


        <Button
            android:id="@+id/lang_Frenchbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="300dp"
            android:layout_gravity="center_horizontal"
            android:maxLines="2"
            android:paddingBottom="20dp"
            android:text="@string/mic_textbtn3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lang_chinese"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/button"
        android:orientation="vertical"
        android:visibility="gone">


        <Button
            android:id="@+id/lang_chinesebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|top"
            android:maxLines="2"
            android:paddingBottom="20dp"
            android:text="@string/mic_textbtn4" />

    </LinearLayout>


</RelativeLayout>