<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Push_TalkActivity"
    android:layout_centerInParent="true"
    android:background="@drawable/background_jwazat">


    <RelativeLayout
        android:id="@+id/mic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:background="@drawable/mic_button"
        android:src="@color/light_darkgreen"
        android:visibility="visible">

        <ImageView
            android:id="@+id/mic_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="34dp"
            android:layout_marginTop="34dp"
            android:src="@drawable/microphone" />

    </RelativeLayout>


    <Button
        android:id="@+id/back_btn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/back_btn" />

    <TextView
        android:id="@+id/press_text"
        android:layout_width="392dp"
        android:layout_height="49dp"
        android:layout_below="@+id/mic"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="171dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="168dp"
        android:gravity="center_horizontal|center"
        android:text="@string/text"
        android:textColor="@color/dark_green"
        android:textSize="25sp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:src="@drawable/jawazat_logo" />

    <ImageView
        android:id="@+id/headphone"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="455dp"
        android:layout_marginTop="282dp"
        android:src="@drawable/greenheadphones"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

    <ImageView
        android:id="@+id/speak"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="455dp"
        android:layout_marginTop="282dp"
        android:src="@drawable/volume"
        android:visibility="gone"
        android:layout_centerInParent="true" />

    <ImageView
        android:id="@+id/load"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="450dp"
        android:layout_marginTop="295dp"
        android:src="@drawable/loading"
        android:visibility="gone"
        />



    <TextView
        android:id="@+id/listen_textt"
        android:layout_width="392dp"
        android:layout_height="49dp"
        android:layout_below="@+id/headphone"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="322dp"
        android:gravity="center_horizontal|center"
        android:text="@string/mic_textt"
        android:textColor="@color/dark_green"
        android:textSize="25sp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/speak_textt"
        android:layout_width="392dp"
        android:layout_height="49dp"
        android:layout_below="@+id/headphone"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="322dp"
        android:gravity="center_horizontal|center"
        android:text="@string/ans_textt"
        android:textColor="@color/dark_green"
        android:textSize="25sp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>


    <TextView
        android:id="@+id/tv_speech_to_text"
        android:layout_width="320dp"
        android:layout_height="230dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-21dp"
        android:layout_marginTop="453dp"
        android:layout_marginEnd="-242dp"
        android:background="@drawable/text_rectangle"
        android:padding="10dp"
        android:textSize="30sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_res"
        android:layout_width="320dp"
        android:layout_height="230dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-21dp"
        android:layout_marginTop="431dp"
        android:layout_marginEnd="-242dp"
        android:background="@drawable/text_rectangle"
        android:padding="10dp"
        android:textSize="30sp"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/err_speech"
        android:layout_width="wrap_content"
        android:layout_height="563dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">


        <ImageView
            android:id="@+id/error"
            android:layout_width="98dp"
            android:layout_height="188dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/redheadphones" />

        <TextView
            android:id="@+id/error_textt"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/error_text"
            android:textColor="@color/red"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/mic1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/mic_button"
            android:orientation="vertical"
            android:src="@color/light_darkgreen">

            <ImageView
                android:id="@+id/mic_btn1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/microphone" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/network_err"
        android:layout_width="wrap_content"
        android:layout_height="563dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">


        <ImageView
            android:id="@+id/error1"
            android:layout_width="98dp"
            android:layout_height="188dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/redheadphones" />

        <TextView
            android:id="@+id/error_textt1"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/network_text"
            android:textColor="@color/red"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/mic2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/mic_button"
            android:orientation="vertical"
            android:src="@color/light_darkgreen">

            <ImageView
                android:id="@+id/mic_btn2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/microphone" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
